--- a/state-space-walkthrough.ipynb
+++ b/state-space-walkthrough.ipynb
@@ -1,5 +1,24 @@
-# Install packages {.unlisted .hidden}
-
-```{r}
-source("./install.r")
-```
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Install packages {.unlisted .hidden}\n",
+        "\n",
+        "```{r}\n",
+        "source(\"./install.r\")\n",
+        "```"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "name": "python3",
+      "language": "python",
+      "display_name": "Python 3 (ipykernel)"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 4
+}
