--- a/refs.bib
+++ b/refs.bib
@@ -1,6 +1,24 @@
+@article{anderson2000,
+  title = {Null {{Hypothesis Testing}}: {{Problems}}, {{Prevalence}}, and an {{Alternative}}},
+  shorttitle = {Null {{Hypothesis Testing}}},
+  author = {Anderson, David R. and Burnham, Kenneth P. and Thompson, William L.},
+  year = {2000},
+  journal = {The Journal of Wildlife Management},
+  volume = {64},
+  number = {4},
+  eprint = {3803199},
+  eprinttype = {jstor},
+  pages = {912--923},
+  publisher = {[Wiley, Wildlife Society]},
+  issn = {0022-541X},
+  doi = {10.2307/3803199},
+  urldate = {2024-05-06},
+  abstract = {This paper presents a review and critique of statistical null hypothesis testing in ecological studies in general, and wildlife studies in particular, and describes an alternative. Our review of Ecology and the Journal of Wildlife Management found the use of null hypothesis testing to be pervasive. The estimated number of P-values appearing within articles of Ecology exceeded 8,000 in 1991 and has exceeded 3,000 in each year since 1984, whereas the estimated number of P-values in the Journal of Wildlife Management exceeded 8,000 in 1997 and has exceeded 3,000 in each year since 1994. We estimated that 47\% (SE = 3.9\%) of the P-values in the Journal of Wildlife Management lacked estimates of means or effect sizes or even the sign of the difference in means or other parameters. We find that null hypothesis testing is uninformative when no estimates of means or effect size and their precision are given. Contrary to common dogma, tests of statistical null hypotheses have relatively little utility in science and are not a fundamental aspect of the scientific method. We recommend their use be reduced in favor of more informative approaches. Towards this objective, we describe a relatively new paradigm of data analysis based on Kullback-Leibler information. This paradigm is an extension of likelihood theory and, when used correctly, avoids many of the fundamental limitations and common misuses of null hypothesis testing. Information-theoretic methods focus on providing a strength of evidence for an a priori set of alternative hypotheses, rather than a statistical test of a null hypothesis. This paradigm allows the following types of evidence for the alternative hypotheses: the rank of each hypothesis, expressed as a model; an estimate of the formal likelihood of each model, given the data; a measure of precision that incorporates model selection uncertainty; and simple methods to allow the use of the set of alternative models in making formal inference. We provide an example of the information-theoretic approach using data on the effect of lead on survival in spectacled eider ducks (Somateria fischeri). Regardless of the analysis paradigm used, we strongly recommend inferences based on a priori considerations be clearly separated from those resulting from some form of data dredging.},
+  file = {C:\Users\qasena\Zotero\storage\928XL3VJ\Anderson et al. - 2000 - Null Hypothesis Testing Problems, Prevalence, and.pdf}
+}
 
 @article{chamberlin1897,
-  title = {The {{Method}} of {{Multiple Working Hypotheses}}},
+  title = {The Method of Multiple Working Hypotheses},
   author = {Chamberlin, T.C.},
   year = {1897},
   journal = {The Journal of Geology},
@@ -9,23 +27,19 @@
   abstract = {With this method the dangers of parental affection for a favorite theory can be circumvented. by T. C. Chamberlin As methods of study constitute the leading theme of our session, I have chosen as a subject in measurable consonance the method of multiple working hypothesis in its application to investigation, instruction, and citizenship. There are two fundamental classes of study. The one consists in attempting to follow by close imitation the processes of previous thinkers, or to acquire by memorizing the results of their investigations. It is merely secondary, imitative, or acquisitive study. The other class is primary or creative study. In it the effort is to think independently, or at least individually, in the endeavor to discover new truth, or to make new combinations of truth, or at least to develop an individualized aggregation of truth. The endeavor is to think for one's self, whether the thinking lies wholly in the fields of previous thought or not. It is not necessary to this habit of study that the subject-material should be new; but the process of thought and its results must be individual and independent, not the mere following of previous lines of thought ending in predetermined results. The demonstration of a problem in Euclid precisely as laid down is an illustration of the former; the demonstration of the same proposition by a method of one's own or in a manner distinctively individual is an illustration of the latter; both lying entirely within the realm of the known and the old. Creative study, however, finds it largest application in those subjects in which, while much is known, more remains to be known. Such are the fields which we, as naturalists, cultivate; and we are gathered for the purpose of developing improved methods lying largely in the creative phase of study, though not wholly so. Intellectual methods have taken three phases in the history of progress thus far. What may be the evolutions of the future it may not be prudent to forecast. Naturally the methods we now urge seem the highest attainable. These three methods may be designated, first, the method of ruling theory; second, the method of working hypothesis; and, third, the method of multiple working hypothesis.}
 }
 
-@article{perkel2022,
-  title = {Cut the Tyranny of Copy-and-Paste with These Coding Tools},
-  author = {Perkel, Jeffrey M.},
-  year = {2022},
-  month = feb,
-  journal = {Nature},
-  volume = {603},
-  number = {7899},
-  pages = {191--192},
-  publisher = {{Nature Publishing Group}},
-  doi = {10.1038/d41586-022-00563-z},
-  abstract = {`Executable manuscripts' insert results directly into documents, eliminating common mistakes.},
-  copyright = {2022 Nature},
+@article{schlenker2024,
+  title = {Interacting Effects of Fire and Hydroclimate on Oak and Beech Community Prevalence in the Southern {{Great Lakes}} Region},
+  author = {Schlenker, Nora and Johnson, Jonathan and {Ray-Cozzens}, Tessa and Stefanova, Vania and Nelson, David M. and Shuman, Bryan N. and Williams, John W.},
+  year = {2024},
+  journal = {Journal of Ecology},
+  volume = {112},
+  number = {5},
+  pages = {1101--1122},
+  issn = {1365-2745},
+  doi = {10.1111/1365-2745.14289},
+  urldate = {2024-06-14},
+  abstract = {Rising temperatures, increasing hydroclimate variability and intensifying disturbance regimes increase the risk of rapid ecosystem conversions. We can leverage multi-proxy records of past ecosystem transformations to understand their causes and ecosystem vulnerability to rapid change. Prior to Euro-American settlement, northern Indiana was a mosaic of prairie, oak-dominated forests/woodlands and beech-dominated hardwood forests. This heterogeneity, combined with well-documented but poorly understood past beech population declines, make this region ideal for studying the drivers of ecosystem transformations. Here, we present a new record from Story Lake, IN, with proxies for vegetation composition (pollen), fire (charcoal) and beech intrinsic water use efficiency ({$\delta$}13C of beech pollen; {$\delta$}13Cbeech). Multiple proxies from the same core enable clear establishment of lead--lag relationships. Additionally, {$\delta$}13Cbeech enables direct comparisons between beech population abundance and physiological responses to changing environments. We compare Story Lake to a nearby lake-level reconstruction and to pollen records from nearby Pretty and Appleman Lakes and the distal Spicer Lake, to test hypotheses about synchrony and the spatial scale of governing processes. The 11.7 ka sediment record from Story Lake indicates multiple conversions between beech-hardwood forest and oak forest/woodland. Beech pollen abundances rapidly increased between 7.5 and 7.1 ka, while oak declined. Oak abundances increased after 4.6 ka and remained high until 2.8 ka, indicating replacement of mesic forests by oak forest/woodland. At 2.8 ka, beech abundances rapidly increased, indicating mesic forest reestablishment. Beech and oak abundances correlate with charcoal accumulation rates but beech abundance is not correlated with {$\delta$}13Cbeech. Fluctuations in beech abundances are synchronous among Story, Appleman and Pretty Lakes, but asynchronous between Story and Spicer Lakes, suggesting regulation by local-scale vegetation-fire-climate feedbacks and secondarily by regional-scale drivers. Holocene forest composition and fire dynamics appear to be closely co-regulated and may be affected by local to regional climate variations. The importance of extrinsic drivers and positive/negative feedbacks changes over time, with higher ecoclimate sensitivity before 2.8 ka and greater resilience afterwards. Synthesis: Overall, oak- and beech-dominated ecosystems were highly dynamic over the Holocene, with multiple ecosystem conversions driven by shifting interactions among vegetation, hydroclimate and fire regime.},
   langid = {english},
-  keywords = {Computational biology and bioinformatics,Computer science,Software},
-  annotation = {Bandiera\_abtest: a Cg\_type: Technology Feature Subject\_term: Computational biology and bioinformatics, Computer science, Software},
-  file = {C\:\\Users\\qasena\\Zotero\\storage\\25TL2YZE\\Perkel - 2022 - Cut the tyranny of copy-and-paste with these codin.pdf;C\:\\Users\\qasena\\Zotero\\storage\\42QNYGK9\\d41586-022-00563-z.html}
+  keywords = {aridity,disturbance regime,drought,Fagus grandifolia,fire,Holocene,hydroclimate,lake-level,palaeoecology,pollen,Quercus,rapid ecological change,stable carbon isotopes},
+  file = {C\:\\Users\\qasena\\Zotero\\storage\\ARPTBBPY\\Schlenker et al. - 2024 - Interacting effects of fire and hydroclimate on oa.pdf;C\:\\Users\\qasena\\Zotero\\storage\\AW32BWZ8\\1365-2745.html}
 }
-
-
